...

    render() {
        return (
            <Container style={styles.container}>
                <Header style={styles.header}>
                    <Left style={styles.headerLeft}>
                        <Button transparent onPress={() => this.props.navigateBack()} testID="articleDetailGoBack">
                            <Icon name="md-arrow-back" />
                        </Button>
                    </Left>
                    <Body>
                    <Title style={styles.headerTitle}>{this.props.article.title}</Title>
                    </Body>
...
