...
                    renderRow={article =>
                        (<ListItemPlain
                            title={article.title}
                            subTitle={article.authors.map(author => author.name).join(', ')}
                            supplementalInfo={moment(article.updated).format('MM/YYYY')}
                            onPress={() => { this.props.onItemPressed(article); }}
                            testID="recentArticle"
                        />)}
                />
            </View>
        );
    }
}
...
