...
                  renderRow={article =>
                      (<ListItemWithSecondaryAction
                          title={article.title}
                          subTitle={article.authors.map(author => author.name).join(', ')}
                          onPress={() => { this.props.onItemPressed(article); }}
                          onSecondaryActionPress={() => { this.props.deleteDownloadedArticleAndPaperIfPermitted(article.id); }}
                          testID="downloadedArticle"
                      />)}
                />
            </View>
        );
    }
}
...
